[package]
name = "json-hand"
version = "0.0.3"
edition = "2021"

[dependencies]
fltk = "^1.4"
# fltk = { version = "^1.4", git = "https://github.com/fltk-rs/fltk-rs" }
serde_json = "1.0"
lazy_static = "1.4"
# fltk-evented = "0.5"
strum = { version = "0.26", features = ["derive"] }
regex = "1.10.4"
chrono = "0.4.38"
fltk-theme = "0.7.2"
clipboard = "0.5.0"
# [patch.crates-io]
# fltk = { git = "https://github.com/fltk-rs/fltk-rs" } # https://github.com/fltk-rs/fltk-rs/issues/1544