[package]
name = "json-hand"
version = "0.1.0-hotfix"
edition = "2021"
description = "An applicaton to pick part field from a whole json"

[dependencies]
fltk = "^1.4"
# fltk = { version = "^1.4", git = "https://github.com/fltk-rs/fltk-rs" }
serde_json = "1.0"
lazy_static = "1.4"
# fltk-evented = "0.5"
strum = { version = "0.26", features = ["derive"] }
regex = "1.10.4"
chrono = "0.4.38"
fltk-theme = "0.7.2"
clipboard = "0.5.0"
toml_edit = "0.22.14"
# [patch.crates-io]
# fltk = { git = "https://github.com/fltk-rs/fltk-rs" } # https://github.com/fltk-rs/fltk-rs/issues/1544

[package.metadata.bundle]
# 这里是 cargo-bundle 特定的配置
identifier = "learn.self.davelet"
name = "JSON PICKER"
short_version_string = "0.4.0"
bundle_identifier = "json.hand.learn.self.davelet"
bundle_name = "JSON HAND"
application_category = "public.app-category.developer-tools"
icon = ["assets/icon.png"]
resources = ["assets"]
